# graphics

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  run.sh
OGL/common/: controls.cpp  shader.cpp  shader.hpp
OGL/tutorial06_keyboard_and_mouse/: tutorial06.cpp  tutorial06_keyboard_and_mouse
OpenGL/: CMakeLists.txt  GLSL.cpp  Makefile  cmake_install.cmake  controls.cpp  controls.hpp  fragmentShader_passthrough.glsl  fragmentShader_perVertexColor.glsl  glfwExample.cpp  vertexShader_normal.glsl  vertexShader_perVertexColor.glsl
cmake/Modules/: ExtraMacros.cmake
examples/: CMakeLists.txt  cameraTester.cpp  testFrameBuffer.cpp  test_XMLSceneParse.cpp  test_pngWrite.cpp
json-develop/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonConfig.cmake
main/: CMakeLists.txt  Makefile  SafeQueue.h  ThreadPool.h  cmake_install.cmake  run  run.cpp
renderer/: AreaLight.cpp  AreaLight.h  BVH.cpp  BVH.h  BlinnPhong.cpp  BlinnPhong.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  HitStruct.cpp  HitStruct.h  Lambertian.cpp  Lambertian.h  Light.cpp  Light.h  MIrror.cpp  MIrror.h  Makefile  Mirror.cpp  Mirror.h  NormalShader.cpp  NormalShader.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  RendererBasic.cpp  RendererBasic.h  RendererOpenGL.cpp  RendererOpenGL.h  SceneContainer.cpp  SceneContainer.h  (+15 more)
renderer/sceneData/scenes_A/: oneBox.json  spheres_1K.json
src/: CMakeLists.txt  Makefile  Vector3D.cpp  Vector3D.h  cmake_install.cmake  constants.h  framebuffer.cpp  framebuffer.h  math3d.h  math3d_base.h  matrix44.h  quaternion.h  vector4.h
src/core/: core.h  math3d_plugin_sse.h  math3d_plugin_sse3.h
src/utils/: batch_operations.h  matrix_utils.h
utests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
